--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="action_logout">logout</string>
     <string name="action_help">help</string>
     <string name="search_hint">id</string>
+    <string name="confirm_password">confirm password</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
